--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <h1>My First Heading</h1>
 
+<img src="IMG_3604.JPG" alt="Rachel Cameron" width="500" length="500">
 <p>My First Paragraph.</p>
 
 </body>
