--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 <p>My First Paragraph.</p>
 
-<img src="IMG_3604.JPG" alt="Rachel Cameron" width="500" length="500">
+<img src="IMG_3604.PNG" alt="Rachel Cameron" width="500" length="500">
 
 </body>
 
