--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h1>My First Heading</h1>
   
-<p>My First Paragraph.</p>
+<p>My name is Rachel Cameron. I am a 16 year old girl currently in my junior year at Dos Pueblos High School. I enjoy playig soccer and reading. I have a twin sister named Jenna and I have an adorable cat named Leo.</p>
 
 <img src="IMG_3604.PNG" alt="Rachel Cameron" width="500" length="500">
 
